[package]
name = "as-if-std"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"
publish = false

[lib]
test = false
doc = false
doctest = false
bench = false

[dependencies]
cfg-if = "1.0"
# FIXME(fmease): Temporary until <https://github.com/rust-lang/rustc-demangle/pull/87> gets merged.
# rustc-demangle = "0.1.21"
rustc-demangle = { version = "0.1.27", git = "https://github.com/fmease/rustc-demangle.git", rev = "dda854fcc5a6766c4d12d84e18cc73f0f9ecf592" }
libc = { version = "0.2.156", default-features = false }

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies]
miniz_oxide = { version = "0.8", optional = true, default-features = false }
ruzstd = { version = "0.8.1", optional = true, default-features = false }
addr2line = { version = "0.25.0", optional = true, default-features = false }

[target.'cfg(not(all(windows, target_env = "msvc", not(target_vendor = "uwp"))))'.dependencies.object]
version = "0.37.0"
default-features = false
optional = true
features = ['read_core', 'elf', 'macho', 'pe', 'xcoff', 'unaligned', 'archive']

[target.'cfg(any(windows, target_os = "cygwin"))'.dependencies]
windows-targets = "0.52.6"

[features]
default = ['backtrace']
backtrace = ['addr2line', 'miniz_oxide', 'object', 'ruzstd']
std = []

[lints.rust]
unexpected_cfgs = "allow"
